# MolSim-WS25-GroupE

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  Makefile  MolSim  README.md  cmake_install.cmake
.github/: CODEOWNERS
.github/workflows/: ci_build_and_test.yml  ci_lint.yml
Testing/Temporary/: ParticleContainerTest.h
benchmark_csv_output/: benchmark_20260128_231850_33810d6_parzival-21m70012ge_eingabeRayleighTaylorBigBenchmarking.yml.csv  benchmark_20260129_005504_139008b_parzival-21m70012ge_eingabeRayleighTaylorBigBenchmarking.yml.csv  benchmark_20260129_035255_395d8fd_parzival-21m70012ge_eingabeRayleighTaylorBigBenchmarking.yml.csv
benchmark_txt_output/: benchmark_20260128_231850_33810d6_parzival-21m70012ge_eingabeRayleighTaylorBigBenchmarking.yml.txt  benchmark_20260129_005504_139008b_parzival-21m70012ge_eingabeRayleighTaylorBigBenchmarking.yml.txt  benchmark_20260129_035255_395d8fd_parzival-21m70012ge_eingabeRayleighTaylorBigBenchmarking.yml.txt
cmake/: CompilerWarnings.cmake  ProjectOptions.cmake  VersionControl.cmake
cmake/modules/: clang-format.cmake  doxygen.cmake  gtest.cmake  vtk.cmake  (+5 more)
gprof_txt_output/: gprof_20260128_195403_e645edc_parzival-21m70012ge_eingabeRayleighTaylorBigBenchmarking_t1.yml.txt  gprof_20260128_201935_e645edc_parzival-21m70012ge_eingabe.yml.txt  gprof_20260129_005634_139008b_parzival-21m70012ge_eingabeRayleighTaylorBigBenchmarking.yml.txt  gprof_20260129_165648_90f110d_parzival-21m70012ge_eingabeW5Task3Small.yml.txt  gprof_20260129_170456_90f110d_parzival-21m70012ge_eingabeNanoScaleFlowSmall.yml.txt
input/: contest1.yml  contest2.yml  eingabe-cuboids.txt  eingabe-cuboids.yml   eingabe-linkedCell.txt  eingabe-sonne.txt  eingabe.yml  eingabeNanoScaleEpsilon.yml  eingabeNanoScaleFlow.yml  eingabeNanoScaleFlowBenchmarking_PairStatic.yml  eingabeNanoScaleFlowProfiling.yml  eingabeNanoScaleNoThermo.yml  eingabeNanoScaleOldThermo.yml  eingabeNanoScaleOutflow.yml  eingabeNanoScaleReflecting.yml  eingabeNanoScaleSphere.yml  eingabeRayleighTaylorBig.yml  eingabeRayleighTaylorBigBenchmarking.yml  eingabeRayleighTaylorBigBenchmarking_t1.yml  eingabeRayleighTaylorSmall.yml  eingabeW4Task3_drop.yml  eingabeW4Task3_equilibrate.yml  eingabeW5Task1_membrane.yml  eingabeW5Task3.yml  eingabeW5Task3Profiling.yml  eingabeW5Task3Small.yml  eingabecuboids.yml  eingabedisc.yml
output/: MD_vtk_0010.vtu  MD_vtk_0020.vtu  MD_vtk_0030.vtu  MD_vtk_0040.vtu  MD_vtk_0050.vtu  MD_vtk_0060.vtu  MD_vtk_0070.vtu  MD_vtk_0080.vtu  MD_vtk_0090.vtu  MD_vtk_0100.vtu  MD_vtk_0110.vtu  MD_vtk_0120.vtu  MD_vtk_0130.vtu  MD_vtk_0140.vtu  MD_vtk_0150.vtu  MD_vtk_0160.vtu  MD_vtk_0170.vtu  MD_vtk_0180.vtu  MD_vtk_0190.vtu  MD_vtk_0200.vtu  MD_vtk_0210.vtu  MD_vtk_0220.vtu  MD_vtk_0230.vtu  MD_vtk_0240.vtu  MD_vtk_0250.vtu  MD_vtk_0260.vtu  MD_vtk_0270.vtu  MD_vtk_0280.vtu  MD_vtk_0290.vtu  MD_vtk_0300.vtu  MD_vtk_0310.vtu  MD_vtk_0320.vtu  MD_vtk_0330.vtu  MD_vtk_0340.vtu  MD_vtk_0350.vtu  MD_vtk_0360.vtu  MD_vtk_0370.vtu  MD_vtk_0380.vtu  MD_vtk_0390.vtu  MD_vtk_0400.vtu  (+7102 more)
runs/: parallel_run_rayleigh3D_contest2.slurm  serial_run_rayleigh_large.slurm
scripts/: run_benchmark.sh  run_gprof.sh
src/: CMakeLists.txt  Cuboid.h  FileReader.cpp  FileReader.h  ForceCalculation.h  InputReader.cpp  InputReader.h  LennardJones.cpp  LennardJones.h  MolSim.cpp  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.cpp:Zone.Identifier  ParticleContainer.h  ParticleGenerator.cpp  ParticleGenerator.h  PlanetSimulation.cpp  PlanetSimulation.h  Simulation.h  SimulationFactory.cpp  SimulationFactory.h  StormerVerlet.cpp  StormerVerlet.h  logging.cpp
src/Container/: Container.h  ContainerFactory.cpp  ContainerFactory.h  ContainerType.h  LinkedCellContainer.cpp  LinkedCellContainer.h  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h
src/ForceCalculation/: ForceCalculation.h  LennardJones.cpp  LennardJones.h  MembraneForce.cpp  MembraneForce.h  StormerVerlet.cpp  StormerVerlet.h
src/Generator/: Cuboid.cpp  Cuboid.h  CuboidGenerator.cpp  CuboidGenerator.h  Disc.cpp  Disc.h  DiscGenerator.cpp  DiscGenerator.h  MembraneGenerator.cpp  MembraneGenerator.h  ParticleGenerator.cpp  ParticleGenerator.h
src/Simulation/: MembraneSimulation.cpp  MembraneSimulation.h  MoleculeSimulation.cpp  MoleculeSimulation.h  PlanetSimulation.cpp  PlanetSimulation.h  Simulation.h  SimulationFactory.cpp  SimulationFactory.h  SimulationType.h
src/inputReader/: Arguments.h  CheckpointReader.cpp  CheckpointReader.h  Cuboid.h  CuboidGenerator.h  FileReader.cpp  FileReader.h  FileReaderCuboids.cpp  FileReaderCuboids.h  InputReader.cpp  InputReader.h  SimulationConfig.h  YamlConverter.h  YamlInputReader.cpp  YamlInputReader.h
src/outputWriter/: CheckpointWriter.cpp  CheckpointWriter.h  OutputFormat.h  OutputWriter.cpp  OutputWriter.h  VTKWriter.cpp  VTKWriter.h  WriterFactory.cpp  WriterFactory.h  XYZWriter.cpp  XYZWriter.h
src/utils/: ArrayUtils.h  MaxwellBoltzmannDistribution.h  NanoScaleThermostat.cpp  NanoScaleThermostat.h  OpenMPCompat.h  ParticleProfiling.cpp  ParticleProfiling.h  Thermostat.cpp  Thermostat.h  logging.hpp  profilingplots.py
tests/: CMakeLists.txt
tests/Temporary/Unit/: ForceCalculationTests.cpp  ParticleContainerTest.cpp
tests/Temporary/behaviour/: ParticleContainerTest.cpp  ParticleContainerTest.h
tests/Temporary/integration/: ParticleContainerTest.h
tests/Unit/: CheckpointIOTest.cpp  DiscGeneratorTest.cpp  DiscGeneratorTest.h  ForceCalculationTest.cpp  ForceCalculationTest.h  ForceCalculationTests.cpp  ForceCalculationTests.h  LinkedCellContainerTest.cpp  MembraneGeneratorForceTest.cpp  NSThermostatTest.cpp  ParallelForcesCellDynamicTests.cpp  ParallelForcesConsistencyTests.cpp  ParallelForcesTests.cpp  ParticleContainerTest.cpp  ParticleContainerTest.h  ParticleGeneratorDiscTest.cpp  ThermostatTest.cpp
tests/behaviour/: DiscGeneratorTest.cpp  DiscGeneratorTest.h  ParticleContainerTest.cpp  ParticleGenerator.cpp  ParticleGeneratorTest.cpp
tests/integration/: MoleculeSimTest.cpp  MoleculeSimTest.h  ParticleContainerTest.cpp
(+15 files in other folders)
